pushing design changes to repo...

--- a/test.html
+++ b/test.html
@@ -200,6 +200,20 @@
 
     </style>
 
+
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137370451-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-137370451-1');
+    </script>
+
+
+
 </head>
 <body>
 
@@ -266,7 +280,7 @@
             <br/>
 
             <div class="container">
-                <h1 class="trebuchet lg-headers text-center"><i class="fas fa-file-alt"></i> Resume <a class="btn btn-sm btn-dark" href="CSnyder-Resume-March-21st-2019.pdf"><i class="fas fa-download"></i> PDF</a></h1>
+                <h1 class="trebuchet lg-headers text-center"><i class="fas fa-file-alt"></i> Resume <a class="btn btn-sm btn-dark" href="CSnyder-Resume-March-30th-2019.pdf"><i class="fas fa-download"></i> PDF</a></h1>
 
             <div class="row">
 
@@ -277,7 +291,7 @@
 
                             <span class="badge badge-dark mb-2 trebuchet">Nov 2017 - Present</span>
                             <h3 class="trebuchet h3-resume">Full Stack Developer | Triad Behavioral Health</h3>
-                            <p class="calibri">During my tenure with the company I have completed a multitude of projects using AWS, Bootstrap 3/4, C#, CSS3, Docker, Git, HTML5, JavaScript, jQuery, Laravel, SQL, Symfony, and VB Script.  I have maintained an exceptional level of customer service while collaborating with team members on project requirements, involving both front-end & back-end development and have successfully met deadlines.  The projects I have completed on my own or as a collaborative effort have had a noticeably positive effect on revenue.</p>
+                            <p class="calibri">During my tenure with the company I have completed a multitude of projects using AWS, Bootstrap 3/4, C#, CSS3, Docker, Git, HTML5, JavaScript, jQuery, Laravel, SQL, Symfony, and VB Script.  I have maintained an exceptional level of customer service while collaborating with team members on project requirements, involving both front-end & back-end development and have successfully met or exceeded deadlines.  The projects I have completed for TLS on my own or as a collaborative effort have had a considerably positive effect on company revenue.</p>
                             <hr/>
 
                             <span class="badge badge-dark mb-2 trebuchet">2012 - Present</span>
@@ -485,6 +499,11 @@
 
                     <tr class="d-flex">
                         <td class="col-6">SQL</td>
+                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:85%;"></div></div></td>
+                    </tr>
+
+                    <tr class="d-flex">
+                        <td class="col-6">Symfony</td>
                         <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:85%;"></div></div></td>
                     </tr>
 
