--- a/test.html
+++ b/test.html
@@ -290,7 +290,7 @@
 
 
                             <span class="badge badge-dark mb-2 trebuchet">Nov 2017 - Present</span>
-                            <h3 class="trebuchet h3-resume">Full Stack Developer | Triad Behavioral Health</h3>
+                            <h3 class="trebuchet h3-resume">Full Stack Developer | Triad Learning Systems</h3>
                             <p class="calibri">During my tenure with the company I have completed a multitude of projects using AWS, Bootstrap 3/4, C#, CSS3, Docker, Git, HTML5, JavaScript, jQuery, Laravel, SQL, Symfony, and VB Script.  I have maintained an exceptional level of customer service while collaborating with team members on project requirements, involving both front-end & back-end development and have successfully met or exceeded deadlines.  The projects I have completed for TLS on my own or as a collaborative effort have had a considerably positive effect on company revenue.</p>
                             <hr/>
 
