--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
             font-size: 2.5rem;
         }
 
+        h2.lg-headers-sub{
+            font-size: 1.5rem;
+        }
+
 
         .calibri {
             font-family: 'Calibri';
@@ -83,6 +87,10 @@
         .h3-resume {
             font-size: 1.45rem;
 
+        }
+
+        .resume-break{
+            display:inline-block;
         }
 
         .rating {
@@ -141,7 +149,7 @@
         .my-gallery img {
             width: 100%;
             height: auto;
-            border: 2px solid #000000;
+            border: 2px solid #000000 !important;
         }
 
         /*portfolio styles*/
@@ -195,6 +203,14 @@
         @media screen and (max-width: 499px) {
             span.tab-text {
                 display: none;
+            }
+
+            /*.school-logo {*/
+                /*width:25px;*/
+            /*}*/
+
+            .h3-school-title{
+                font-size: 1rem;
             }
         }
 
@@ -266,7 +282,7 @@
                     <div class="col-12">
                         <p class="calibri main-text">Hello! My name is Chris Snyder and I have been working full-time as a professional Full Stack Developer since November 2017, but am always interested in hearing about other opportunities where my expertise could be utilized.  In August 2017, I graduated from Washington State University magna cum laude with a BBA in Management Information Systems.  Prior to that I completed three degrees (all with honors) at Spokane Community College including an AAS in Software Development, an AA in Business, and an AA in Arts.  I have an excellent aptitude for learning new technical skills and a proven track record of becoming proficient with them in a short amount of time.</p>
 
-                        <h2 class="trebuchet lg-headers text-center"> <i class="fas fa-guitar"></i> Hobbies &amp; Interests <i class="fas fa-bicycle"></i></h2>
+                        <h2 class="trebuchet lg-headers-sub text-center"> <i class="fas fa-guitar"></i> Hobbies &amp; Interests <i class="fas fa-bicycle"></i></h2>
                         <p class="calibri main-text">I enjoy spending quality time with family and friends.  I greatly enjoy humor and making others laugh and smile.  For fun I like to hike, bike, listen to music, collect vinyl records, play guitar, sing, and write songs.  I also enjoy doing home improvement projects, and working outside during the warmer months, tending to an impressive vegetable garden.  I am a basketball fan and my favorite NBA team is the Portland Trail Blazers.  Even though I attended WSU (Go Cougs!), I am a huge fan of Gonzaga’s basketball team.  When I am not busy with work, family, friends, or enjoying the other hobbies or interests mentioned, I spend a great deal of time expanding & refining my technical skills by learning as much as I can about software, coding, web development &amp; computers.  I truly love and am satisfied by what I do professionally.  In fact, I enjoy it so much that I am regularly working on professional or personal coding projects for hours after putting in a full day of effort at work.</p>
                     </div>
 
@@ -290,7 +306,7 @@
 
 
                             <span class="badge badge-dark mb-2 trebuchet">Nov 2017 - Present</span>
-                            <h3 class="trebuchet h3-resume">Full Stack Developer | Triad Learning Systems</h3>
+                    <h3 class="trebuchet h3-resume">Full Stack Developer | <span class="resume-break">Triad Learning Systems</span></h3>
                             <p class="calibri">During my tenure with the company I have completed a multitude of projects using AWS, Bootstrap 3/4, C#, CSS3, Docker, Git, HTML5, JavaScript, jQuery, Laravel, SQL, Symfony, and VB Script.  I have maintained an exceptional level of customer service while collaborating with team members on project requirements, involving both front-end & back-end development and have successfully met or exceeded deadlines.  The projects I have completed for TLS on my own or as a collaborative effort have had a considerably positive effect on company revenue.</p>
                             <hr/>
 
@@ -300,7 +316,7 @@
                             <hr/>
 
                             <span class="badge badge-dark mb-2 trebuchet">Jan 2010 - Feb 2012</span>
-                            <h3 class="trebuchet h3-resume">IT Help Desk | Team Spirit America</h3>
+                    <h3 class="trebuchet h3-resume">IT Help Desk | <span class="resume-break">Team Spirit America</span></h3>
                             <p class="calibri">Helped staff in troubleshooting and resolving technical computing issues, repaired malfunctioning or otherwise inoperable computers and hardware when necessary, served as customer support and technical liaison to CEO, staff members and vendors. Monitored internet based lead providing partner companies that TSA did business with utilizing proprietary software.</p>
                             <hr/>
 
@@ -310,7 +326,7 @@
 
                             <span class="badge badge-dark mb-2 trebuchet">Aug 2015 - Aug 2017</span>
                             <br/>
-                            <h3 class="trebuchet h3-resume"><img class="img-fluid" src="images-new/wsu-icon-transparent.png" alt="Washington State University:  Go Cougs!"> Washington State University</h3>
+                    <h3 class="trebuchet h3-resume h3-school-title"><img class="img-fluid school-logo" src="images-new/wsu-icon-transparent.png" alt="Washington State University:  Go Cougs!"> Washington State University</h3>
                             <p class="calibri">I attended Washington State University starting August 2015 and completed earning my BBA in Management Information Systems magna cum laude August 2017.</p>
                             <h5 class="trebuchet text-muted">Degree Earned</h5>
 
@@ -324,7 +340,7 @@
                                 </thead>
                                 <tbody>
                                 <tr class="d-flex">
-                                    <td class="col-4">Management Information Systems<br/>BBA<br/>Magna cum laude</td>
+                                    <td class="col-4">MIS<br/>BBA<br/>(magna cum laude)</td>
                                     <td class="col-4">Aug 2017</td>
                                     <td class="col-4">3.82</td>
                                 </tr>
@@ -335,7 +351,7 @@
 
                             <span class="badge badge-dark mb-2 trebuchet">Jul 2012 - Jun 2015</span>
                             <br/>
-                            <h3 class="trebuchet h3-resume"><img class="img-fluid" src="images-new/scc-logo.png" alt="Spokane Community College:  Go Squatch!"> Spokane Community College</h3>
+                            <h3 class="trebuchet h3-resume h3-school-title"><img class="img-fluid school-logo" src="images-new/scc-logo.png" alt="Spokane Community College:  Go Squatch!"> Spokane Community College</h3>
                             <p class="calibri">I started attending Spokane Community College in July 2012 and initially decided to pursue my AAS in Software Development. In the process, I made the decision to continue pursuing my education with a goal of attending WSU.  I earned two more degrees along the way in order to earn as many of my prerequisites towards my BA as possible.</p>
                             <h5 class="trebuchet text-muted">Degrees Earned</h5>
 
