pushing design changes to repo...

--- a/index.html
+++ b/index.html
@@ -212,6 +212,11 @@
             .h3-school-title{
                 font-size: 1rem;
             }
+
+
+            h2.lg-headers-sub {
+                font-size: 1.3rem;
+            }
         }
 
     </style>
@@ -300,7 +305,7 @@
 
             <div class="row">
 
-                <div class="col-lg-8 col-12">
+                <div class="col-lg-8 col-12 mt-2">
                     <h2 class="trebuchet lg-headers"><i class="fas fa-laptop-code"></i> Experience</h2>
                     <br/>
 
