pushing design changes to repo...

--- a/index.html
+++ b/index.html
@@ -217,6 +217,15 @@
             h2.lg-headers-sub {
                 font-size: 1.3rem;
             }
+
+
+            h1#contact_header{
+                font-size:2em;
+            }
+
+            ht#contact_header i{
+                font-size:1em;
+            }
         }
 
     </style>
