--- a/index.html
+++ b/index.html
@@ -223,9 +223,44 @@
                 font-size:2em;
             }
 
-            ht#contact_header i{
+            h1#contact_header i{
                 font-size:1em;
             }
+
+
+
+            h1#resume_header{
+                font-size:2em;
+            }
+
+            h1#resume_header i{
+                font-size:1em;
+            }
+
+
+            h1#portfolio_header{
+                font-size:2em;
+            }
+
+            h1#portfolio_header i{
+                font-size:1em;
+            }
+
+
+            h2 {
+                font-size:1.7rem;
+            }
+
+            img#portrait-img{
+                width:150px;
+            }
+
+
+            h1#name_header{
+                font-size:2em;
+            }
+
+
         }
 
     </style>
@@ -275,12 +310,12 @@
 
                 <div class="row">
                     <div class="col-lg-3 offset-lg-3 col-md-12 col-sm-12 col-12 order-1 order-lg-1 order-sm-1">
-                        <img src="images-new/csnyder.png" class="img-fluid portrait-about mx-auto d-block rounded-circle" alt="Chris Snyder">
+                        <img src="images-new/csnyder.png" id="portrait-img" class="img-fluid portrait-about mx-auto d-block rounded-circle" alt="Chris Snyder">
                     </div>
 
                     <div class="col-lg-4 col-md-12 col-sm-12 col-12 order-2 order-lg-2 order-sm-2 mr-3">
 
-                        <h1 class="text-center trebuchet lg-headers">Chris Snyder</h1>
+                        <h1 id="name_header" class="text-center trebuchet lg-headers">Chris Snyder</h1>
                         <h3 class="text-center trebuchet text-muted">Full Stack Developer</h3>
                         <h2 class="text-center">
                             <a class="icon-link" href="https://www.linkedin.com/in/chris-snyder-49956610" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -310,7 +345,7 @@
             <br/>
 
             <div class="container">
-                <h1 class="trebuchet lg-headers text-center"><i class="fas fa-file-alt"></i> Resume <a class="btn btn-sm btn-dark" href="CSnyder-Resume-March-30th-2019.pdf"><i class="fas fa-download"></i> PDF</a></h1>
+                <h1 id="resume_header" class="trebuchet lg-headers text-center"><i class="fas fa-file-alt"></i> Resume <a class="btn btn-sm btn-dark" href="CSnyder-Resume-March-30th-2019.pdf"><i class="fas fa-download"></i> PDF</a></h1>
 
             <div class="row">
 
@@ -755,8 +790,8 @@
 
         <div class="tab-pane fade" id="portfolio" role="tabpanel" aria-labelledby="portfolio-tab">
             <br/>
-            <h1 class="text-center trebuchet lg-headers"><i class="fas fa-briefcase"></i> Portfolio</h1>
-            <p class="main-text calibri">This section of my site is dedicated to some work I have completed and felt appropriate to showcase.  If you click on an image on this page, you will be opening up a navigable gallery for a particular project which includes a technical description of each image.  If you click on an accompanying 'More Info' button then you will be able to read more about a particular project.</p>
+            <h1 id="portfolio_header" class="text-center trebuchet lg-headers"><i class="fas fa-briefcase"></i> Portfolio</h1>
+            <p class="main-text calibri">This section is dedicated to some of the work I have completed and felt appropriate to showcase.  If you click on an image on this page, a navigable gallery will be displayed for a particular project.  Each image includes a  description.  If you click on an accompanying 'More Info' button then you will be able to read more about a particular project.</p>
 
            <!--beginning of portfolio galleries-->
             <div class="row mx-auto">
