pushing design changes to repo...

--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
         <div class="tab-pane fade" id="portfolio" role="tabpanel" aria-labelledby="portfolio-tab">
             <br/>
             <h1 id="portfolio_header" class="text-center trebuchet lg-headers"><i class="fas fa-briefcase"></i> Portfolio</h1>
-            <p class="main-text calibri">This section is dedicated to some of the work I have completed and felt appropriate to showcase.  If you click on an image on this page, a navigable gallery will be displayed for a particular project.  Each image includes a  description.  If you click on an accompanying 'More Info' button then you will be able to read more about a particular project.</p>
+            <p class="main-text calibri">This section is dedicated to some of the work I have completed and felt appropriate to showcase.  If you click on a project image on this page, a navigable gallery will be displayed.  Each image in a gallery includes a  description of the pictured page.  If you click on an accompanying 'More Info' button then you will be able to read more about a particular project.</p>
 
            <!--beginning of portfolio galleries-->
             <div class="row mx-auto">
