pushing design changes to repo...

--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
                 display: none;
             }
 
-            /*.school-logo {*/
-                /*width:25px;*/
-            /*}*/
+            .school-logo {
+                width:35px;
+            }
 
             .h3-school-title{
                 font-size: 1rem;
