--- a/index.html
+++ b/index.html
@@ -261,6 +261,37 @@
             }
 
 
+
+            .rating {
+                width: 120px;
+                height: 24px;
+                position: relative;
+                margin-left: auto;
+                margin-right: auto;
+            }
+            .stars {
+                background: url(images-new/stars-newer-bg-lg_mobile.png);
+                z-index: 10;
+                position: absolute;
+                top: 0;
+                left: 0;
+            }
+
+            .back {
+                background: #000000;
+                border-bottom: 1px solid #ffffff;
+                border-left: 1px solid #ffffff;
+                border-right: 1px solid #ffffff;
+                border-top: 1px solid #ffffff;
+
+            }
+
+            .back, .stars {
+                width: 100%;
+                height: 100%;
+            }
+
+
         }
 
     </style>
