pushing design changes to repo...

--- a/lilac-dogs/faq.html
+++ b/lilac-dogs/faq.html
@@ -110,8 +110,8 @@
 <h2>Q<span class="smaller_colon">:</span> <span class="call">What's the best way to get ahold of Lilac City Dog Walking &amp; Care?</span></h2>
 
 <p class="faq_answer_mid">A<span class="smaller_colon">:</span>  <span class="response">We don't mind receiving text messages or emails as opposed to phone calls. Please feel free to contact us any way you'd like, but bear in mind that technology is not always 100% reliable and text messages can be lost in transit from time to time!</span></p>
-<hr>
-<h2>Q<span class="smaller_colon">:</span> <span class="call">Who does your website design?</span></h2>
+<!--<hr>-->
+<!--<h2>Q<span class="smaller_colon">:</span> <span class="call">Who does your website design?</span></h2>-->
 
 <!--<p class="faq_answer_mid">A<span class="smaller_colon">:</span>  <span class="response">We had our website designed by Chris at Mastercoda.  Chris is a web developer there and if you are interested in his expertise, he can be reached on the contact page on his company website <a title="http://www.MasterCoda.com" class="link2" href="http://www.mastercoda.com">MasterCoda.com</a>.</span></p>-->
 <hr>
