pushing design changes to repo...

--- a/index.html
+++ b/index.html
@@ -1030,7 +1030,14 @@
                             <a href="images-new/public-playlist-custom-audio-player.png" itemprop="contentUrl" data-size="1241x953">
                                 <img src="images-new/public-playlist-custom-audio-player.png" itemprop="thumbnail" alt="Image description" />
                             </a>
-                            <figcaption itemprop="caption description">Laravel Audio Admin AWS S3 Interface<br/> TBH Audio Custom Audio Player of Playlist Public Facing Bootstrap 4/Responsive </figcaption>
+                            <figcaption itemprop="caption description">Laravel TBH Audio Public Desktop<br/> TBH Audio Custom Audio Player of Playlist Public Facing Bootstrap 4/Responsive </figcaption>
+                        </figure>
+
+                        <figure style="display:none;" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images-new/mobile-audio-tbh-audio_admin.png" itemprop="contentUrl" data-size="464x942">
+                                <img src="images-new/mobile-audio-tbh-audio_admin.png" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                            <figcaption itemprop="caption description">Laravel TBH Audio Admin Public Mobile<br/> TBH Audio Custom Audio Player of Playlist Public Facing Mobile-friendly/Responsive Bootstrap 4 Xcode iPhone simulation :)</figcaption>
                         </figure>
 
 
