pushing design changes to repo...

--- a/index.html
+++ b/index.html
@@ -1044,7 +1044,7 @@
 
 
                     </div>
-                    <h6 class="trebuchet">Laravel TBH Video Admin AWS S3 Interface<br/> One-to-Many (one license can have many playlists).<br/> Many-to-Many (many playlists can have many audio tracks)</h6>
+                    <h6 class="trebuchet">Laravel TBH Video Admin AWS S3 Interface<br/> One-to-Many (one license can have many playlists).<br/> Many-to-Many (many playlists can have many videos)</h6>
                     <a href="#demo15" class="btn btn-dark" data-toggle="collapse">More Info</a>
                     <div id="demo15" class="collapse calibri">
                         <br/>
