pushing design changes to repo...

--- a/index.html
+++ b/index.html
@@ -637,6 +637,7 @@
                         <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:80%;"></div></div></td>
                     </tr>
 
+
                     <tr class="d-flex">
                         <td class="col-6">VPS</td>
                         <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:85%;"></div></div></td>
@@ -671,6 +672,11 @@
                     <tr class="d-flex">
                         <td class="col-6">JetBrains IDE's</td>
                         <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:80%;"></div></div></td>
+                    </tr>
+
+                    <tr class="d-flex">
+                        <td class="col-6">Legacy Systems</td>
+                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:85%;"></div></div></td>
                     </tr>
 
                     <tr class="d-flex">
